Changes in loan and EMi services for handling json response

--- a/loanmanagement/src/app/components/loan-list/loan-list.component.html
+++ b/loanmanagement/src/app/components/loan-list/loan-list.component.html
@@ -2,9 +2,9 @@
     <mat-card-header>
       <mat-card-title>
         @if (isAdmin()) {
-          All Loans
+          All Loans &nbsp;
         } @else {
-          My Loans
+          My Loans &nbsp;
         }
       </mat-card-title>
       @if (!isAdmin()) {
